# Auu.Voice

./: .gitignore  App.xaml  App.xaml.cs  CHANGELOG.md  CONTRIBUTING.md  ChatGptService.cs  ConfigManager.cs  HotkeyService.cs  LICENSE  MainForm.cs  MainForm.resx  MainWindow.xaml  MainWindow.xaml.cs  OutputSimulator.cs  ProcessingModeManagerWindow.xaml  ProcessingModeManagerWindow.xaml.cs  Program.cs  README.md  RecordingOverlay.cs  RecordingOverlayWpf.xaml  RecordingOverlayWpf.xaml.cs  Speech2TextAssistant.csproj  Speech2TextAssistant.sln  SpeechRecognizerService.cs  TextInputWindow.xaml  TextInputWindow.xaml.cs  install.ps1  run.bat  run.ps1
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Models/: AppSettings.cs  ChatGptPromptType.cs  ProcessingMode.cs
cpp/: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  app.rc  build.bat  main.cpp  resources.qrc  setup_build_environment.bat
cpp/Models/: AppSettings.cpp  AppSettings.h  ChatGptPromptType.h
cpp/Services/: ChatGptService.cpp  ChatGptService.h  ConfigManager.cpp  ConfigManager.h  HotkeyService.cpp  HotkeyService.h  OutputSimulator.cpp  OutputSimulator.h  SpeechRecognizerService.cpp  SpeechRecognizerService.h
cpp/UI/: RecordingOverlay.cpp  RecordingOverlay.h
